--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 
 img{
 height: 150px;
-margin-left: 24%;
+display:block;
+margin:0px auto;
+text-align:center;
 }
 
 .container{
@@ -19,6 +21,9 @@ margin-left: 24%;
   margin-left: 30%;
   margin-bottom: 40px;
   padding: 5px;
+  padding-left: 20px;
+  box-shadow: 1px 1px 1px 1px;
+  font-weight: 600;
 }
 
 .container button{
@@ -28,7 +33,8 @@ margin-left: 24%;
   font-size: 15px;
   text-align: center;
   margin-left: 20px;
-  font-weight: bold;
+  font-weight: 600;
+  box-shadow: 1px 1px 1px 1px;
 }
 
 .output{
